--- a/WebApplication2/Areas/Admin/Views/Shared/_aAdminLayout.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Shared/_aAdminLayout.cshtml
@@ -329,6 +329,15 @@
                         </h4>
                      
                     </div>
+                    <div class="filter-section">
+                        <h4>
+                            <a class="text-black"
+                               asp-action="student" asp-controller="homee" aria-expanded="false">
+                                <i class="fa fa-file"></i><span class="hide-menu" style="margin-left:5px;">Students</span>
+                            </a>
+                        </h4>
+                     
+                    </div>
 
                     <div class="filter-section">
                         <h4 class="d-flex justify-content-between align-items-center">
