--- a/WebApplication2/Views/Instructor/Profile.cshtml
+++ b/WebApplication2/Views/Instructor/Profile.cshtml
@@ -1,4 +1,7 @@
-﻿@* <!DOCTYPE html>
+﻿@using System.Security.Claims
+@model InstructorDetailsViewModel
+
+@* <!DOCTYPE html>
 <html>
 <head>
 
@@ -76,7 +79,7 @@
         background-position: center center;
     }
 </style>
-<div class="banner header-text">
+<div class=" header-text">
     <div class="owl-banner owl-carousel">
         <div class="banner-item-1">
         </div>
@@ -85,7 +88,10 @@
 
 
 <div class="container">
-    <div class="row" style="margin-top:-75px">
+    <div class="row" >
+        <form asp-action="profile">
+        <input hidden asp-for="@Model.InstructorId" />
+        </form>
         <div class="col-md-3 text-center">
             <img src="~/images/product_02.jpg" class="rounded-circle img-fluid" alt="Instructor Image" style="margin-bottom:20px">
 
@@ -96,21 +102,33 @@
                 <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-linkedin"></i></a>
                 <a href="#" class="btn btn-outline-secondary mb-2"><i class="fa fa-youtube"></i></a>
             </div>
-
+           
         </div>
-        <div class="col-md-9" style="padding:15px; margin-bottom:2px;">
-            <h3 class="fw-bold">Anudeep Ayyagari</h3>
-            <p>29-year UX + Design Veteran; Consultant, Author & Speaker</p>
+        <div class="col-md-9 " style="padding:15px; margin-bottom:2px;">
+            <h3 class="fw-bold">@Model.FirstName  @Model.LastName</h3>
+            <p>@Model.Profession</p>
+            <p>@Model.Email</p>
+
 
             <p>
                 <span class="text-danger">&#9733; 4.5</span> Instructor Rating
                 <br />
+                <span class="text-black"><i class="fa fa-calendar icon"></i></span> @Model.YearsExperince
+                <br />
                 <span class="text-black"><i class="fa fa-comment"></i></span> 28,707 Reviews
                 <br />
                 <span class="text-black"><i class="fa fa-book"></i></span> 8 Courses
+                <br />
+                <span class="text-black"><i class="fa fa-book"></i></span> @Model.About
+                <br />
+                <span class="text-black"><i class="fa fa-male icon"></i></span> @Model.Gender
+
             </p>
+            <a class="btn btn-light" asp-controller="instructor" asp-action="edit" asp-route-id="@User.FindFirstValue( System.Security.Claims.ClaimTypes.NameIdentifier)" style="margin:100px;"> Edit Profile</a>
 
         </div>
+       
+        
     </div>
 </div>
 
