--- a/WebApplication2/Areas/Admin/Views/Homee/Index.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Homee/Index.cshtml
@@ -119,7 +119,7 @@
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="icon icon-shape bg-secondary text-white rounded-circle">
-                                                <i class="fa fa-user-circle"></i>
+                                                <i class="fa fa-user"></i>
                                             </div>
                                             <div class="ml-3">
                                                 <h5>Students</h5>
@@ -137,7 +137,7 @@
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="icon icon-shape bg-secondary text-white rounded-circle">
-                                                <i class="fa fa-id-card"></i>
+                                                <i class="fa "></i>
                                             </div>
                                             <div class="ml-3">
                                                 <h5>Instructors</h5>
@@ -154,7 +154,7 @@
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="icon icon-shape bg-secondary text-white rounded-circle">
-                                                <i class="fa fa-file-alt"></i>
+                                                <i class="fa fa-file"></i>
                                             </div>
                                             <div class="ml-3">
                                                 <h5>Reports</h5>
