--- a/WebApplication2/Areas/Admin/Views/Homee/Instructor.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Homee/Instructor.cshtml
@@ -16,7 +16,7 @@
                 <div class="text-end upgrade-btn">
                     @*  <a href="https://www.wrappixel.com/templates/xtremeadmin/" class="btn btn-primary text-white"
                     target="_blank">Upgrade to Pro</a> *@
-                    <a href="@Url.Action("register", "account",new{area =""})" role="button" class="btn btn-primary float-right"
+                    <a href="@Url.Action("Step1", "account",new{area =""})" role="button" class="btn btn-primary float-right"
                        style="color: #fff;
                                     background-color: #007bff;
                                     border-color: #007bff;
