--- a/WebApplication2/Views/Account/Login.cshtml
+++ b/WebApplication2/Views/Account/Login.cshtml
@@ -52,7 +52,7 @@
                             <div class="col-12">
 
                                 <div class="d-flex">
-                                    <input type="checkbox" style="width:20px; height:25px; margin-right:3px;">Remmber Me
+                                    <input asp-for="RememberMe" type="checkbox" style="width:20px; height:25px; margin-right:3px;">Remmber Me
 
 
                                 </div>
