--- a/WebApplication2/Views/Course/EditableDetails.cshtml
+++ b/WebApplication2/Views/Course/EditableDetails.cshtml
@@ -229,11 +229,11 @@
                             <h6>Price Status:</h6>
                             @if (Model.Course.PriceStatus is true)
                             {
-                                <h6> paid </h6>
+                                <h6> Free </h6>
                             }
                             else
                             {
-                                <h6>free  </h6>
+                                <h6>Paid  </h6>
                             }
 
                             <h6>Last Update: @Model.Course.LastUpdate</h6>
