adding student profile functionality and adding default value for course standard question

--- a/WebApplication2/Views/Course/Details.cshtml
+++ b/WebApplication2/Views/Course/Details.cshtml
@@ -241,11 +241,11 @@
                             <h6>Price Status:</h6>
                             @if (Model.Course.PriceStatus is true)
                                 {
-                                    <h6> paid </h6>
+                                    <h6> Free </h6>
                                 }
                                 else
                                 {
-                                    <h6>free  </h6>
+                                    <h6>Paid  </h6>
                                 } 
                             
                             <h6>LastUpdate: @Model.Course.LastUpdate</h6>
