--- a/WebApplication2/Views/Review/EditableDetails.cshtml
+++ b/WebApplication2/Views/Review/EditableDetails.cshtml
@@ -159,7 +159,7 @@
                                         <ul class="dropdown-menu" style="width:50px;" aria-labelledby="navbarDropdown">
 
 
-                                            <a class="dropdown-item" asp-action="ReviewToggleStatus" asp-controller="admin" asp-route-id="@Model.ReviewId">Pending</a>
+                                            <a class="dropdown-item" asp-area="admin" asp-action="ReviewToggleStatus" asp-controller="Homee" asp-route-id="@Model.ReviewId">Pending</a>
 
                                         </ul>
                                     }
@@ -170,7 +170,7 @@
                                         </a>
                                         <ul class="dropdown-menu" style="width:50px;" aria-labelledby="navbarDropdown">
 
-                                            <a class="dropdown-item" asp-action="ReviewToggleStatus" asp-controller="admin" asp-route-id="@Model.ReviewId">Accepted</a>
+                                            <a class="dropdown-item" asp-area="admin" asp-action="ReviewToggleStatus" asp-controller="Homee" asp-route-id="@Model.ReviewId">Accepted</a>
 
 
                                         </ul>
